# libcircllhist

./: .gitignore  .travis.yml  Doxyfile  LICENSE  LICENSE.OpenHistogram  Makefile.in  README.MD  README.md  configure.ac
.github/workflows/: publish-to-pypi.yml
src/: Makefile.in  cdflib.h  circllhist.c  circllhist.h  circllhist_config.h.in  circllhist_print.c  circlltool.c  dcdflib.c  generateLuaFiles.sh  generatePythonFiles.sh  prepareFFI.sh
src/lua/: circllhist.lua
src/python/: README.md  RELEASE.md  setup.py  test.py
src/python/circllhist/: __init__.py  wrapper.py
src/test/: circllhist_test.lua  histogram_c_test.lua  histogram_perf.c  histogram_test.c  runTest.sh
